--- a/index.html
+++ b/index.html
@@ -18,196 +18,208 @@
   </head>
   <body>
     <header class="header">
-      <nav class="navbar-nav">
-        <a href="" class="main-logo"
-          >Web<span class="main-logo-span">Studio</span></a
-        >
-        <ul class="navbar-menu">
-          <li><a class="navbar-link" href="./index.html">Studio</a></li>
-          <li><a class="navbar-link" href="">Portfolio</a></li>
-          <li><a class="navbar-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="navbar-contact">
-        <ul>
-          <li>
-            <a class="navbar-contact-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="navbar-contact-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container is-flex">
+        <nav class="navbar-nav">
+          <a href="" class="main-logo"
+            >Web<span class="main-logo-span">Studio</span></a
+          >
+          <ul class="navbar-menu">
+            <li><a class="navbar-link" href="./index.html">Studio</a></li>
+            <li><a class="navbar-link" href="">Portfolio</a></li>
+            <li><a class="navbar-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="navbar-contact">
+          <ul>
+            <li>
+              <a class="navbar-contact-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="navbar-contact-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <!-- Section - Hero -->
       <section class="section-hero">
-        <h1 class="heading-style-main">
-          Effective Solutions for Your Business
-        </h1>
-        <button class="button" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="heading-style-main">
+            Effective Solutions for Your Business
+          </h1>
+          <button class="button" type="button">Order Service</button>
+        </div>
       </section>
       <!-- Section - Features -->
       <section class="section-features">
-        <h2 class="heading-style-section">Features</h2>
-        <ul>
-          <li>
-            <h3 class="heading-style-element">Strategy</h3>
-            <p class="section-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="heading-style-element">Punctuality</h3>
-            <p class="section-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="heading-style-element">Diligence</h3>
-            <p class="section-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="heading-style-element">Technologies</h3>
-            <p class="section-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="heading-style-section">Features</h2>
+          <ul>
+            <li>
+              <h3 class="heading-style-element">Strategy</h3>
+              <p class="section-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="heading-style-element">Punctuality</h3>
+              <p class="section-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="heading-style-element">Diligence</h3>
+              <p class="section-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="heading-style-element">Technologies</h3>
+              <p class="section-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Section - Team -->
       <section class="section-team">
-        <h2 class="heading-style-section">Our Team</h2>
-        <ul>
-          <li class="team-item">
-            <img
-              src="./images/img-1.jpg"
-              alt="Mark Guerrero photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="heading-style-element">Mark Guerrero</h3>
-            <p class="section-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img-2.jpg"
-              alt="Tom Ford photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="heading-style-element">Tom Ford</h3>
-            <p class="section-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img-3.jpg"
-              alt="Camila Garcia photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="heading-style-element">Camila Garcia</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img-4.jpg"
-              alt="Daniel Wilson photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="heading-style-element">Daniel Wilson</h3>
-            <p class="section-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="heading-style-section">Our Team</h2>
+          <ul>
+            <li class="team-item">
+              <img
+                src="./images/img-1.jpg"
+                alt="Mark Guerrero photo"
+                width="264"
+                height="260"
+              />
+              <h3 class="heading-style-element">Mark Guerrero</h3>
+              <p class="section-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img-2.jpg"
+                alt="Tom Ford photo"
+                width="264"
+                height="260"
+              />
+              <h3 class="heading-style-element">Tom Ford</h3>
+              <p class="section-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img-3.jpg"
+                alt="Camila Garcia photo"
+                width="264"
+                height="260"
+              />
+              <h3 class="heading-style-element">Camila Garcia</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img-4.jpg"
+                alt="Daniel Wilson photo"
+                width="264"
+                height="260"
+              />
+              <h3 class="heading-style-element">Daniel Wilson</h3>
+              <p class="section-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Section - Our Portfolio -->
       <section class="section-portfolio">
-        <h2 class="heading-style-section">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/portfolio-img-5.jpg"
-              width="360"
-              height="300"
-              alt="Banking App"
-            />
-            <h3 class="heading-style-element">Banking App</h3>
-            <p class="section-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio-img-4.jpg"
-              width="360"
-              height="300"
-              alt="Cashless Payment"
-            />
-            <h3 class="heading-style-element">Cashless Payment</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio-img-3.jpg"
-              width="360"
-              height="300"
-              alt="Meditation App"
-            />
-            <h3 class="heading-style-element">Meditation App</h3>
-            <p class="section-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio-img-2.jpg"
-              width="360"
-              height="300"
-              alt="Taxi Service"
-            />
-            <h3 class="heading-style-element">Taxi Service</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio-img-1.jpg"
-              width="360"
-              height="300"
-              alt="Screen Illustrations"
-            />
-            <h3 class="heading-style-element">Screen Illustrations</h3>
-            <p class="section-text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio-img-6.jpg"
-              width="360"
-              height="300"
-              alt="Online Courses"
-            />
-            <h3 class="heading-style-element">Online Courses</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="heading-style-section">Our Portfolio</h2>
+          <ul>
+            <li>
+              <img
+                src="./images/portfolio-img-5.jpg"
+                width="360"
+                height="300"
+                alt="Banking App"
+              />
+              <h3 class="heading-style-element">Banking App</h3>
+              <p class="section-text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-img-4.jpg"
+                width="360"
+                height="300"
+                alt="Cashless Payment"
+              />
+              <h3 class="heading-style-element">Cashless Payment</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-img-3.jpg"
+                width="360"
+                height="300"
+                alt="Meditation App"
+              />
+              <h3 class="heading-style-element">Meditation App</h3>
+              <p class="section-text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-img-2.jpg"
+                width="360"
+                height="300"
+                alt="Taxi Service"
+              />
+              <h3 class="heading-style-element">Taxi Service</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-img-1.jpg"
+                width="360"
+                height="300"
+                alt="Screen Illustrations"
+              />
+              <h3 class="heading-style-element">Screen Illustrations</h3>
+              <p class="section-text">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-img-6.jpg"
+                width="360"
+                height="300"
+                alt="Online Courses"
+              />
+              <h3 class="heading-style-element">Online Courses</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="main-logo"
-        >Web<span class="logo-span">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="main-logo"
+          >Web<span class="logo-span">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
