002 - add border to header
also global section class that include 120px vertical padding

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <main>
       <!-- Section - Hero -->
-      <section class="section-hero">
+      <section class="section section-hero">
         <div class="container">
           <h1 class="heading-style-main">
             Effective Solutions for Your Business
@@ -57,7 +57,7 @@
         </div>
       </section>
       <!-- Section - Features -->
-      <section class="section-features">
+      <section class="section section-features">
         <div class="container">
           <h2 class="heading-style-section">Features</h2>
           <ul>
@@ -93,7 +93,7 @@
         </div>
       </section>
       <!-- Section - Team -->
-      <section class="section-team">
+      <section class="section section-team">
         <div class="container">
           <h2 class="heading-style-section">Our Team</h2>
           <ul>
@@ -141,7 +141,7 @@
         </div>
       </section>
       <!-- Section - Our Portfolio -->
-      <section class="section-portfolio">
+      <section class="section section-portfolio">
         <div class="container">
           <h2 class="heading-style-section">Our Portfolio</h2>
           <ul>
