004 - Complete all tasks

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <section class="section section-team">
         <div class="container">
           <h2 class="heading-style-section">Our Team</h2>
-          <ul>
+          <ul class="team-flex">
             <li class="team-item">
               <img
                 src="./images/img-1.jpg"
@@ -152,8 +152,10 @@
                 height="300"
                 alt="Banking App"
               />
-              <h3 class="heading-style-element">Banking App</h3>
-              <p class="section-text">App</p>
+              <div class="portfolio_card-footer">
+                <h3 class="heading-style-element">Banking App</h3>
+                <p class="section-text">App</p>
+              </div>
             </li>
             <li>
               <img
@@ -162,8 +164,10 @@
                 height="300"
                 alt="Cashless Payment"
               />
-              <h3 class="heading-style-element">Cashless Payment</h3>
-              <p class="section-text">Marketing</p>
+              <div class="portfolio_card-footer">
+                <h3 class="heading-style-element">Cashless Payment</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
             <li>
               <img
@@ -172,8 +176,10 @@
                 height="300"
                 alt="Meditation App"
               />
-              <h3 class="heading-style-element">Meditation App</h3>
-              <p class="section-text">App</p>
+              <div class="portfolio_card-footer">
+                <h3 class="heading-style-element">Meditation App</h3>
+                <p class="section-text">App</p>
+              </div>
             </li>
             <li>
               <img
@@ -182,8 +188,10 @@
                 height="300"
                 alt="Taxi Service"
               />
-              <h3 class="heading-style-element">Taxi Service</h3>
-              <p class="section-text">Marketing</p>
+              <div class="portfolio_card-footer">
+                <h3 class="heading-style-element">Taxi Service</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
             <li>
               <img
@@ -192,8 +200,10 @@
                 height="300"
                 alt="Screen Illustrations"
               />
-              <h3 class="heading-style-element">Screen Illustrations</h3>
-              <p class="section-text">Design</p>
+              <div class="portfolio_card-footer">
+                <h3 class="heading-style-element">Screen Illustrations</h3>
+                <p class="section-text">Design</p>
+              </div>
             </li>
             <li>
               <img
@@ -202,8 +212,10 @@
                 height="300"
                 alt="Online Courses"
               />
-              <h3 class="heading-style-element">Online Courses</h3>
-              <p class="section-text">Marketing</p>
+              <div class="portfolio_card-footer">
+                <h3 class="heading-style-element">Online Courses</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
