005 - first itearation of fixes
- add display block for img globaly;
- add align-items: center for nav flex container;
- add margin-right to nav main logo;
- add padding for nav -links;
- add class to ul in address

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </ul>
         </nav>
         <address class="navbar-contact">
-          <ul>
+          <ul class="address-flex">
             <li>
               <a class="navbar-contact-link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
