005 - first iteration of fixes

--- a/index.html
+++ b/index.html
@@ -60,29 +60,29 @@
       <section class="section section-features">
         <div class="container">
           <h2 class="heading-style-section">Features</h2>
-          <ul>
-            <li>
+          <ul class="features_flex-list">
+            <li class="features_flex-element">
               <h3 class="heading-style-element">Strategy</h3>
               <p class="section-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="features_flex-element">
               <h3 class="heading-style-element">Punctuality</h3>
               <p class="section-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="features_flex-element">
               <h3 class="heading-style-element">Diligence</h3>
               <p class="section-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="features_flex-element">
               <h3 class="heading-style-element">Technologies</h3>
               <p class="section-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -104,8 +104,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="heading-style-element">Mark Guerrero</h3>
-              <p class="section-text">Product Designer</p>
+              <div class="team-item_footer">
+                <h3 class="heading-style-element">Mark Guerrero</h3>
+                <p class="section-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -114,8 +116,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="heading-style-element">Tom Ford</h3>
-              <p class="section-text">Frontend Developer</p>
+              <div class="team-item_footer">
+                <h3 class="heading-style-element">Tom Ford</h3>
+                <p class="section-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -124,8 +128,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="heading-style-element">Camila Garcia</h3>
-              <p class="section-text">Marketing</p>
+              <div class="team-item_footer">
+                <h3 class="heading-style-element">Camila Garcia</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -134,8 +140,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="heading-style-element">Daniel Wilson</h3>
-              <p class="section-text">UI Designer</p>
+              <div class="team-item_footer">
+                <h3 class="heading-style-element">Daniel Wilson</h3>
+                <p class="section-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -144,8 +152,8 @@
       <section class="section section-portfolio">
         <div class="container">
           <h2 class="heading-style-section">Our Portfolio</h2>
-          <ul>
-            <li>
+          <ul class="portfolio_flex-list">
+            <li class="portfolio_flex-element">
               <img
                 src="./images/portfolio-img-5.jpg"
                 width="360"
@@ -156,7 +164,7 @@
                 <h3 class="heading-style-element">Banking App</h3>
                 <p class="section-text">App</p>
               </div>
-            </li>
+            </li class="portfolio_flex-element">
             <li>
               <img
                 src="./images/portfolio-img-4.jpg"
@@ -168,7 +176,7 @@
                 <h3 class="heading-style-element">Cashless Payment</h3>
                 <p class="section-text">Marketing</p>
               </div>
-            </li>
+            </li class="portfolio_flex-element">
             <li>
               <img
                 src="./images/portfolio-img-3.jpg"
@@ -181,7 +189,7 @@
                 <p class="section-text">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio_flex-element">
               <img
                 src="./images/portfolio-img-2.jpg"
                 width="360"
@@ -193,7 +201,7 @@
                 <p class="section-text">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio_flex-element">
               <img
                 src="./images/portfolio-img-1.jpg"
                 width="360"
@@ -205,7 +213,7 @@
                 <p class="section-text">Design</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio_flex-element">
               <img
                 src="./images/portfolio-img-6.jpg"
                 width="360"
