006 - second round of fixes

--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
                 <h3 class="heading-style-element">Banking App</h3>
                 <p class="section-text">App</p>
               </div>
-            </li class="portfolio_flex-element">
-            <li>
+            </li>
+            <li class="portfolio_flex-element">
               <img
                 src="./images/portfolio-img-4.jpg"
                 width="360"
@@ -176,8 +176,8 @@
                 <h3 class="heading-style-element">Cashless Payment</h3>
                 <p class="section-text">Marketing</p>
               </div>
-            </li class="portfolio_flex-element">
-            <li>
+            </li>
+            <li class="portfolio_flex-element">
               <img
                 src="./images/portfolio-img-3.jpg"
                 width="360"
