008 - fix error about visually hidden
add code form ChatGPT, add class visually-hidden to corespondent element

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <!-- Section - Features -->
       <section class="section section-features">
         <div class="container">
-          <h2 class="heading-style-section">Features</h2>
+          <h2 class="heading-style-section visually-hidden">Features</h2>
           <ul class="features_flex-list">
             <li class="features_flex-element">
               <h3 class="heading-style-element">Strategy</h3>
